File Manipulating Event Driven File Manipulating (Multiple files)